@@ -1,3 +1,11 @@
+## 20210316
+
+- linkerd2版本升级到2.10.0,修复下载url
+- getistio版本升级到v1.0.4
+- istio版本升级到1.9.0
+- helmv3版本升级为3.5.3
+- etcd版本升级为3.4.15
+
 ## 20210226
 
 - 新增getpkg获取k8s资源pkg
